--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -158,6 +158,14 @@ p{
     grid-area: box8;
     background-color: #3B3B28;
 }
+.box8:focus-within{
+     background-color: #fcfca7b5 !important;
+    color: #ffff57;
+}
+.box8Valid{
+      background-color: #fcfca7b5 !important;
+    color: #ffff57;
+}
 .box9{
     border-radius: 10px;
     cursor: pointer;
@@ -168,12 +176,12 @@ p{
     background-color: #A7A771;
 }
 .box9:hover{
-    background-color: rgb(167, 167, 113,0.7);
+    background-color: rgba(218, 218, 136, 0.7);
 }
 .box9:active{
 
     color: #ffff57;
-    background-color: rgb(167, 167, 113,0.4);
+    background-color: rgba(238, 238, 140, 0.4);
 }
 #moneyblingbling{
     background-color: #3B3B28;
@@ -249,4 +257,19 @@ h3{
 }
 #coolImage:hover{
     opacity: 0.7;
+}
+/* toujours placer le media queries a la fin  */
+@media (width < 900px) {
+    .gridContainer{
+     display: grid;
+
+     grid-gap: 1em;
+   
+    grid-template-areas: " grid-item1 "
+                         " grid-item3 "
+                         "grid-item2"
+        ;
+          grid-template-rows: auto ;
+     grid-template-columns: 6fr 4fr;
+}
 }
